--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-node-resolve": "^13.1.3",
         "@rollup/plugin-typescript": "^8.3.0",
+        "@types/minimatch": "^3.0.5",
         "@types/node": "^17.0.19",
         "acorn-globals": "^6.0.0",
+        "minimatch": "^5.0.1",
         "rollup": "^2.68.0",
         "tslib": "^2.3.1",
         "typescript": "^4.5.5"
