--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
     "private": true,
+    "packageManager": "yarn@3.2.0",
     "workspaces": {
         "packages": [
             "experiments/*",
             "packages/*"
         ]
+    },
+    "scripts": {
+        "build": "yarn workspaces foreach -p --include '@tsereact/*' exec rollup -c rollup.config.js"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^21.0.1",
