--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         ]
     },
     "scripts": {
-        "build": "yarn workspaces foreach -p --include '@tsereact/*' exec rollup -c rollup.config.js"
+        "build": "yarn workspaces foreach -ipv --include '@tsereact/*' exec rollup -c rollup.config.js"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^21.0.1",
