--- a/experiments/node-hmr/package.json
+++ b/experiments/node-hmr/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@experiments/sandbox",
+    "name": "@experiments/node-hmr",
     "version": "1.0.0",
     "license": "MIT",
     "type": "module",
